Mash: make root_location in root window coordinate

It seems that Event's root_location is in display's coordinate
in WindowTreeClient (i.e. browser). This could complicate the
coordinate conversions like aura::ScreenCoordinateClient and
cause problems like crbug.com/876509.

Since root_location is relative to the root window in desktop
aura (like desktop Linux), I believe we want to do so too on
Mash.

This is actually contradicting with crrev.com/583488 but
I believe this is better for us.

Bug: 876509
Test: unit tests pass, manually checked crbug.com/873763 behavior
Change-Id: I51f03772e2872783cf5fb9ce78cdcfe3dd7b0e67
Reviewed-on: https://chromium-review.googlesource.com/1187134
Commit-Queue: Jun Mukai <mukai@chromium.org>
Reviewed-by: Scott Violet <sky@chromium.org>
Reviewed-by: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#586067}
Former-commit-id: cc619c2df891e5ef3b5d299ab332d048b285c442